# cmstack-django

./: .env.example  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  REFACTOR_PLAN.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  models.py
apps/api/: serializers.py  services.py  urls.py  views.py
apps/api/tests/: test_read_api.py
apps/comments/: apps.py  services.py  signals.py
apps/comments/tests/: test_notifications.py
apps/content/: models.py  repositories.py  services.py  urls.py  views.py
apps/content/migrations/: 0007_page_deleted_at_post_deleted_at_like.py
apps/content/tests/: test_likes.py  test_soft_delete.py
apps/core/: models.py
apps/core/migrations/: 0002_sitesettings_active_theme.py
apps/dashboard/: mixins.py  services.py  urls.py  views.py
apps/dashboard/templatetags/: dashboard_a11y.py
apps/dashboard/tests/: test_a11y.py  test_media_picker.py  test_trash.py
apps/media/: admin.py  apps.py  constants.py  forms.py  models.py  repositories.py  signals.py  urls.py  views.py
apps/media/migrations/: 0001_initial.py
apps/media/tests/: conftest.py  test_forms.py  test_models.py  test_permissions.py  test_storage.py  test_views.py
apps/menus/: repositories.py  services.py
apps/menus/migrations/: 0003_remove_menuitem_label_menuitemtranslation.py
apps/plugins/: hooks.py
apps/plugins/templatetags/: plugin_hooks.py
apps/search/: views.py
apps/seo/: constants.py  models.py  sitemaps.py  views.py
apps/seo/migrations/: 0003_allow_ai_crawlers.py
apps/seo/tests/: test_crawler_surface.py  test_jsonld.py
apps/themes/: apps.py  loaders.py  registry.py
apps/themes/tests/: test_dashboard.py  test_loader.py  test_registry.py
config/: storages.py  urls.py
config/settings/: base.py  prod.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: admin.js  main.js  styles.css
requirements/: base.txt  prod.txt
templates/: _theme_palette.html  public_base.html
templates/allauth/layouts/: base.html
templates/dashboard/: base.html
themes/default/: theme.json
themes/midnight/: theme.json
themes/midnight/templates/: _theme_palette.html  (+1 more)
(+15 files in other folders)
