[project]
name = "cmstack-django"
version = "0.1.0"
description = "An open-source,  CMS built on Python/Django — lighter, faster, SEO-first."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

[tool.black]
line-length = 100
target-version = ["py312"]
extend-exclude = '''
/(
    migrations
  | frontend
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "frontend"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, flake8-bugbear, flake8-comprehensions, pyupgrade, django
select = ["E", "F", "I", "B", "C4", "UP", "DJ"]
ignore = ["E501"]  # line length handled by black

[tool.ruff.lint.per-file-ignores]
"**/settings/*.py" = ["F403", "F405"]  # settings modules use star-imports by design

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_test.py"]
# --ds is highest precedence, so the suite always runs under test settings even
# when the container sets DJANGO_SETTINGS_MODULE=dev in the environment.
addopts = "-ra --strict-markers --ds=config.settings.test"
testpaths = ["apps", "tests"]
filterwarnings = [
    # whitenoise warns when STATIC_ROOT is empty (before collectstatic) — benign in tests.
    "ignore:No directory at:UserWarning",
]

# Coverage is opt-in via `pytest --cov=apps` (kept out of default addopts so the
# single-test workflow in CLAUDE.md stays fast and isn't gated by fail_under).
[tool.coverage.run]
source = ["apps"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/apps.py",
    "*/admin.py",
    "manage.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __str__",
    "def __repr__",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
plugins = ["mypy_django_plugin.main"]
exclude = ["migrations", "frontend"]

[tool.django-stubs]
django_settings_module = "config.settings.test"
